--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "redux-thunk": "^2.2.0",
     "thunk": "0.0.1",
     "webpack": "^3.10.0",
-    "webpack-cli": "^2.0.13"
+    "webpack-cli": "^2.0.13",
+    "yelp-api-v3": "^1.5.0"
   },
   "description": "This README would normally document whatever steps are necessary to get the application up and running.",
   "version": "1.0.0",
