--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "react-slick": "^0.23.1",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "slick-carousel": "^1.8.1",
     "thunk": "0.0.1",
     "webpack": "^3.10.0",
     "webpack-cli": "^2.0.13",
